Mon Dec  3 00:55:25 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - include/Makefile.am: clean up autogenerated nut_stdint.h (fixes "make
   distcheck")

Sun Dec  2 20:19:34 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - configure.in, m4/ax_create_stdint_h.m4: Added the AX_CREATE_STDINT_H
   macro to create our own header file with fixed width types.
 - <various>: Use above mentioned header file, instead of <stdint.h>.

Mon Nov 26 19:46:21 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 * drivers/megatec.c:
   - get the values for the "ondelay" and "offdelay" parameters in
     upsdrv_shutdown(), otherwise the defaults are used leaving
     users confused.
   - rewrite documentation for "ondelay" since this timer starts
     counting the moment the UPS is turned off, and not the
     moment line power is restored.
   - Remove "ups.delay.start" and "ups.delay.shutdown" variables
     since they would only affect instant commands and are thus more
     cunfusing than useful in the real world.
   - Changed the check_ups() function to reuse the run_query() function
     instead of duplicating code.
   - Changed the detection process to keep the UPS status for later
     use instead of having to query the UPS again (if this were to fail,
     the driver would fatalx() leaving users confused).

Mon Nov 26 18:27:52 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec_usb.c: Allow longer commands in the 'phoenix'
   subdriver.

Mon Nov 26 14:01:56 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec_usb.c: Echo back the unsupported 'I\r' and 'C\r'
   commands in the 'phoenix' subdriver.

Mon Nov 26 13:45:06 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplitesu.c: Fixed copy-paste error in this driver that
   dates back from the conversion to the new serial I/O functions a
   couple of years back.

Mon Nov 26 10:02:26 UTC 2007 / Arjen de Korte <arjen@de-korte.org>
