@@ -1,3 +1,8 @@
+Mon Dec  3 19:33:52 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>
+
+ - drivers/megatec_usb.c: added reopen matcher for future reconnect
+   support (should be soon if I have time :) ).
+
 Mon Dec  3 00:55:25 UTC 2007 / Charles Lepple <clepple@gmail.com>
 
  - include/Makefile.am: clean up autogenerated nut_stdint.h (fixes "make
